java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting8/ModulesNotSupported.java
<error descr="Modules are not supported at this language level">module M {
  requires A;
}</error>